--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,20 +2,20 @@
 
 <section class="section-wrapper portfolio-section">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title">
-                    <h2>Home Page</h2>
-                </div>
-            </div>
-        </div>
+        <%= will_paginate %>
         <div class="row">
             <% @users.each do |user| %>
             <div class="col-md-3">
                 <%=link_to user, class: "portfolio-item" do %>
+                    <% if user.profile_pic.length < 1 %>
+                    <div class="portfolio-thumb">
+                        <%= image_tag("img-profile") %>
+                    </div>
+                    <% else %>                    
                     <div class="portfolio-thumb">
                         <%= image_tag user.profile_pic %>
                     </div>
+                    <% end %>
 
                     <div class="portfolio-info">
                         <h3><%= user.name %></h3>
@@ -28,6 +28,7 @@
             <% end %>
         </div>
         <!-- /.row -->
+        <%= will_paginate %>
     </div>
 </section>
 <!-- .portfolio -->
